--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   db:
     image: postgres:14
     environment: &common-environment
-      POSTGRES_USER: ${DATABASE_USER:-postgres}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-postgres}
-      POSTGRES_DB: ${DATABASE_NAME:-dive}
-      POSTGRES_HOSTNAME: ${DATABASE_HOSTNAME:-db}
-      POSTGRES_PORT: ${DATABASE_PORT:-5432}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-dive}
+      POSTGRES_HOST: ${POSTGRES_HOST:-db}
+      POSTGRES_PORT: ${POSTGRES_PORT:-5432}
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     command: -p 5432
@@ -19,7 +19,7 @@ services:
     build:
       context: ./dive-server
     tty: true
-    command: bash -c '/code/scripts/wait-for-it.sh $$DATABASE_HOSTNAME:$$DATABASE_PORT && /code/scripts/run_web.sh'
+    command: bash -c '/code/scripts/wait-for-it.sh $$POSTGRES_HOST:$$POSTGRES_PORT && /code/scripts/run_web.sh'
     ports:
       - "8000:8000"
     volumes:
